Fill login email field with registered email

--- a/src/main/resources/templates/users/join.html
+++ b/src/main/resources/templates/users/join.html
@@ -74,7 +74,7 @@
 								<div class="row">
 									<div class="col-12 my-2 input-group input-group-lg">
 										<input type="email" name="email" placeholder="E-mail" class="form-control w-100"
-											required>
+											required th:value="${email}">
 									</div>
 									<div class="col-12 my-2 input-group input-group-lg">
 										<input type="password" name="password" placeholder="Senha"
